manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-api
  labels:
    app: secure-api
spec:
  type: ClusterIP
  selector:
    app: secure-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
